# Arkashri

./: .dockerignore  .env.example  .env.local.example  .env.local.template  .gitignore  .pyre_configuration  .vercelignore  ARCHITECTURE_GRAPHS.md  ARKASHRI_PITCH_DECK.md  AUDIT_WORKFLOW_TEST_REPORT.md  AWS_SETUP_GUIDE.md  Dockerfile  Makefile  README.md  TECHNICAL_BLUEPRINT.md  USER_MANUAL.md  advanced_upgrade_opportunities.md  alembic.ini  arkashri_upgrade_guide.md  audit_quick_start.md  blockchain_setup_guide.md  complete_audit_process_guide.md  complete_implementation_summary.md  custom_domain_setup.md  docker-compose.yml  env_setup_guide.md  erp_connection_guide.md  erp_setup_checklist.md  fix_user.py  fly.toml  next.config.ts  package.json  performance_enhancements_summary.md  pre_deployment_system_check.md  proxy.ts  pyproject.toml  pyrightconfig.json  railway.toml  railway_env_template.txt  requirements.txt  (+30 more)
.githooks/: pre-commit
.github/workflows/: ci.yml  production-ci.yml  production-deploy.yml  railway-deploy.yml
alembic/: env.py
alembic/versions/: 0dcc5cacb5b1_add_missing_engagement_types_to_enum.py  20260223_0001_initial.py  20260223_0002_operational_features.py  20260223_0003_orchestration_rag_approval_chain.py  20260224_0004_security_idempotency.py  20260224_0005_regulatory_ingestion.py  20260224_0006_regulatory_scheduler_alerts.py  20260226_0007_multi_partner_seal.py  20260226_0008_seal_bundle_verify.py  20260226_0009_erp_integration.py  20260228_0010_platform_users.py  20260419_0011_auth_sessions.py  20260419_0012_audit_operationalization.py  20260427_0013_audit_workflow_persistence.py  20260430_0014_reconcile_engagement_schema.py  2b657a64980d_add_missing_risk_entry_and_other_models.py  41c76a5410b9_rulessnapshot_and_regulatorydocument.py  42b05e8f9d7e_gap_4_multi_jurisdiction_standards.py  4df3b99124f2_gap_2_human_judgment_layer.py  61f94b18d54f_expand_engagement_types.py  73aee8dd1554_add_usas_phase_2_3_4_models.py  7d7f4ef8f7d5_merge_multiple_heads.py  ab02c8edb21f_add_usas_phase_1_models.py  b66fe5cf332c_add_auditor_workflow_models.py  ba6f54a1f0de_gap_3_client_portal_access.py  e2e03aa74569_merge_heads_for_audit_operationalization.py
app/: globals.css
arkashri/: Dockerfile  __init__.py  cache.py  config.py  config_management.py  db.py  dependencies.py  logging_config.py  main.py  models.py  railway.json  railway_start.sh  requirements.txt  schemas.py  simple_main.py  worker.py
arkashri.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: EXTERNAL_VERIFICATION_SPEC.md  PRODUCTION_MARKET_READINESS.md  STAGING_MIGRATION_CHECKLIST.md  repo-hygiene.md  repository-strategy.md
k8s/: 01-config.yaml  02-api-deployment.yaml  03-worker-deployment.yaml  04-ingress.yaml  api-deployment.yaml  deployment.yaml  hpa.yaml  monitoring.yaml  namespace.yaml  service.yaml
lib/: api.ts
scratch/: verify_auth_hardening.py
scripts/: arkashri-verify.py  automation_smoke.py  aws_smoke_check.py  check_enum.py  clean_git_history.sh  clear_demo_data.py  concurrency_stress_test.py  dr_test_suite.sh  enable_rls.py  first_audit_smoke.py  fix_enum.py  fix_enum_psycopg.py  inspect_schema.py  inspect_table.py  install-git-hooks.sh  load_test.js  production_readiness_check.py  run_pipeline.py  seed_admin.py  seed_engagements.py  seed_playbooks.py  seed_playbooks_literal.py  seed_playbooks_raw.py
store/: authStore.ts
terraform/: main.tf
tests/: conftest.py  test_audit_automation.py  test_audit_operationalization.py  test_auth_security.py  test_blockchain_adapter.py  test_books_health_readiness.py  test_canonical_rfc.py  test_client_portal_workflow.py  test_data_governance.py  test_data_refinery.py  test_deployment_runtime.py  test_engagement_workflow_persistence.py  test_first_audit_release_gate.py  test_gst_reconciliation.py  test_hash_chain.py  test_india_audit_workspace.py  test_india_reporting.py  test_india_udin.py  test_kms_aws_provider.py  test_mca_enrichment.py  test_merkle_and_realtime.py  test_orchestrator_service.py  test_production_conformance.py  test_production_features.py  test_production_hardening.py  test_production_ingestion.py  test_rag_service.py  test_regulatory_ingestion_utils.py  test_risk_engine.py  test_risk_utils.py  test_security_service.py  test_specialist_audit_engine.py  test_tally_ingestion.py  test_tenant_encryption_hardening.py  test_workflow_pack.py  test_workflow_pack_api.py
uploads/: report_528f58dc-8866-4fa8-adc4-4a2d2084bc56_1773009566.txt
workflow_pack/: README.md  index.json  master_lifecycle.json  service_catalog.json
(+172 files in other folders)
