[project]
name = "arkashri"
version = "0.1.0"
description = "Arkashri sovereign financial decision engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.34",
  "asyncpg>=0.29.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "alembic>=1.13.2",
  "httpx>=0.27.0",
  "arq>=0.26.0",
  "redis>=4.6.0",
  "authlib>=1.3.1",
  "itsdangerous>=2.2.0",
  "python-multipart>=0.0.9",
  # ── Production additions ───────────────────────────────────────────────────
  "aiobotocore>=2.13.0",           # S3 WORM archive upload
  "python-jose[cryptography]>=3.3.0",  # Real JWT signing/validation
  "weasyprint>=62.0",              # PDF audit report export
  "fastapi-cache2[redis]>=0.2.2",  # Caching layer
  "slowapi>=0.1.9",                # Rate limiting
  "prometheus-fastapi-instrumentator>=7.0.0", # Metrics
  "gunicorn>=21.2.0",              # Prod WSGI server
  "structlog>=24.0.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "bcrypt>=4.0.0",
  "sentry-sdk[fastapi]>=2.0.0",
  "openai>=1.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]
chain = [
  "substrate-interface>=1.7.10",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arkashri*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
