[project]
name = "arkashri"
version = "0.1.0"
description = "Arkashri sovereign financial decision engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.34",
  "asyncpg>=0.29.0",
  "pydantic[email]>=2.8.2",
  "pydantic-settings>=2.4.0",
  "alembic>=1.13.2",
  "httpx>=0.27.0",
  "arq>=0.26.0",
  "redis>=4.6.0",
  "authlib>=1.3.1",
  "itsdangerous>=2.2.0",
  "python-multipart>=0.0.9",
      "aiofiles>=23.1.0",
  # ── Production additions ───────────────────────────────────────────────────
  "aiobotocore>=2.13.0",           # S3 WORM archive upload
  "python-jose[cryptography]>=3.3.0",  # Real JWT signing/validation
  "weasyprint>=62.0",              # PDF audit report export
  "fastapi-cache2[redis]>=0.2.2",  # Caching layer
  "slowapi>=0.1.9",                # Rate limiting
  "prometheus-fastapi-instrumentator>=7.0.0", # Metrics
  "gunicorn>=21.2.0",              # Prod WSGI server
  "structlog>=24.0.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "bcrypt>=4.0.0",
  "sentry-sdk[fastapi]>=2.0.0",
  "openai>=1.14.0",
  "circuitbreaker>=2.1.3",
  # ── Enhanced production dependencies ─────────────────────────────────────
  "python-json-logger>=2.0.7,<4.0", # Structured JSON logging (v4 broke pythonjsonlogger.jsonlogger API)
  "tenacity>=8.2.3",               # Retry mechanisms
  "ujson>=5.8.0",                  # Fast JSON parsing
  "aiosmtplib>=1.3.1",             # Async SMTP client
  "psutil>=5.9.6",                 # System monitoring
  "python-multipart>=0.0.9",       # File uploads
  "pyotp>=2.9.0",                  # TOTP for MFA
  "qrcode[pil]>=7.4.2",            # QR code generation
  "authlib>=1.3.0",                # OAuth2 library
  "httpx>=0.27.0",                 # HTTP client for OAuth2
  "scikit-learn>=1.3.0",            # Machine learning
  "pandas>=2.0.0",                 # Data analysis
  "numpy>=1.24.0",                  # Numerical computing
  "web3>=6.0.0",                    # Ethereum/Polygon blockchain
  "substrate-interface>=1.7.10",      # Polkadot blockchain
  "joblib>=1.3.0",                  # Model persistence
  "filetype>=1.2.0",               # File type detection for evidence uploads
  "Jinja2>=3.0.0",                  # HTML template rendering for PDF reports
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]
chain = [
  "substrate-interface>=1.7.10",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arkashri*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
